--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -38,6 +38,7 @@
 .miniform__btn {
     width: 10%;
     display: flex;
+    position: relative;
     flex-wrap: wrap;
     gap: 1rem;
     font-size: 2rem;
