Created ItemService and ItemContext, Create Form, Catalog.

--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -15,6 +15,11 @@
     color: var(--dark-grey);
 }
 
+.headerLogo__{
+    text-decoration: none;
+    color: var(--dark-grey);
+}
+
 .miniform {
     position: relative;
     width: 40%;
